feat: add pagination for all queries
